syntax = "proto3";

service BlockchainRPC {
    rpc SubmitBlock(SubmitBlockRequest) returns (SubmitBlockResponse);

    rpc GetSlotNumber(Empty) returns (SlotNumberResponse);

    rpc GetBlockHash(GetBlockHashRequest) returns (GetBlockHashResponse);

    rpc GetSlotAndShardAssignment(GetSlotAndShardAssignmentRequest) returns (SlotAndShardAssignment);
}

enum Role {
    ATTESTER = 0;
    PROPOSER = 1;
}

message Empty {}

message GetSlotAndShardAssignmentRequest {
    uint32 ValidatorID = 1;
}

message SlotAndShardAssignment {
    uint32 ShardID = 1;
    uint64 Slot = 2;
    Role Role = 3;
}

message SubmitBlockRequest {
    Block Block = 1;
}

message SubmitBlockResponse {
    bytes BlockHash = 1;
}

message SlotNumberResponse {
    uint64 SlotNumber = 1;
}

message GetBlockHashRequest {
    uint64 SlotNumber = 1;
}

message GetBlockHashResponse {
    bytes Hash = 1;
}

message Block {
    uint64 SlotNumber = 1;
    bytes RandaoReveal = 2;
    repeated bytes AncestorHashes = 3;
    bytes ActiveStateRoot = 4;
    bytes CrystallizedStateRoot = 5;
    repeated Attestation Attestations = 6;
    repeated Special Specials = 7;
}

message Special {
    uint32 Type = 1;
    repeated bytes Data = 2;
}

message Attestation {
    uint64 Slot = 1;
    uint32 ShardID = 2;
    uint64 JustifiedSlot = 3;
    bytes JustifiedBlockHash = 4;
    bytes ShardBlockHash = 5;
    repeated bytes ObliqueParentHashes = 6;
    bytes AttesterBitField = 7;
    bytes AggregateSignature = 8;
}